--- a/agent/Jenkinsfile
+++ b/agent/Jenkinsfile
@@ -1,17 +1,19 @@
 pipeline{
-    agent any
-    stages{
-        stage('Checkout'){
-            sh 'sleep 5'
-        }
-        stage('Build'){
-            sh 'sleep 5'
-        }
-        stage('Test'){
-            sh 'sleep 5'
-        }
-        stage('Deploy'){
+ agent any
+
+ stages{
+    stage('Build'){
+        steps{
             sh 'sleep 5'
         }
     }
+    stage('Test'){
+        steps{
+            sh '''
+                #!/bin/bash
+                ls -lrt
+                sleep 5'''
+        }
+    }
+ }   
 }
