--- a/agent/Jenkinsfile
+++ b/agent/Jenkinsfile
@@ -1,19 +1,88 @@
-pipeline{
- agent any
+pipeline {
+    agent any
 
- stages{
-    stage('Build'){
-        steps{
-            sh 'sleep 5'
+    parameters {
+        booleanParam(name: 'CHECKOUT', defaultValue: true, description: 'Toggle this value')
+        booleanParam(name: 'BUILD', defaultValue: true, description: 'Toggle this value')
+        booleanParam(name: 'TEST', defaultValue: true, description: 'Toggle this value')
+        booleanParam(name: 'DEPLOY', defaultValue: false, description: 'Toggle this value')
+    }
+
+    stages {
+        stage('Checkout') {
+            when {
+                expression {
+                    params.CHECKOUT == true
+                }
+            }
+            steps {
+                checkout([$class: 'GitSCM',
+                       branches: [[name: '*/main']],
+                       userRemoteConfigs: [[url: 'https://github.com/jaintpharsha/applications.git',
+                       credentialsId: 'github']]])
+            }
+        }
+
+        stage('Build') {
+            when {
+                expression {
+                    params.BUILD == true
+                }
+            }
+            steps {
+                sh '''
+                    sleep 5
+                '''
+            }
+        }
+
+        stage('TEST MULTIPLE') {
+            parallel {
+                stage('Test1') {
+                    when {
+                        expression {
+                            params.TEST == true
+                        }
+                    }
+                    steps {
+                        catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
+                            sh '''
+                                sleep 10
+                                exit 1
+                            '''
+                        }
+                    }
+                }
+
+                stage('Test2') {
+                    when {
+                        expression {
+                            params.TEST == true
+                        }
+                    }
+                    steps {
+                        catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
+                            sh '''
+                                sleep 10
+                                exit 1
+                            '''
+                        }
+                    }
+                }
+            }
+        }
+
+        stage('Deploy') {
+            when {
+                expression {
+                    params.DEPLOY == true
+                }
+            }
+            steps {
+                sh '''
+                  sleep 5
+                '''
+            }
         }
     }
-    stage('Test'){
-        steps{
-            sh '''
-                #!/bin/bash
-                ls -lrt
-                sleep 5'''
-        }
-    }
- }   
 }
