--- a/agent/Jenkinsfile
+++ b/agent/Jenkinsfile
@@ -1,11 +1,15 @@
 pipeline {
     agent any
+
     parameters {
-        booleanParam(name: 'CHECKOUT', defaultValue: true, description: 'Toggle this value')
-        booleanParam(name: 'BUILD', defaultValue: true, description: 'Toggle this value')
-        booleanParam(name: 'TEST', defaultValue: true, description: 'Toggle this value')
-        booleanParam(name: 'DEPLOY', defaultValue: false, description: 'Toggle this value')
+        string(name: 'PARAM_STRING', defaultValue: 'input_param', description: 'This is a string parameter')
+        booleanParam(name: 'TOGGLE', defaultValue: true, description: 'Toggle this value')
     }
+    
+    triggers{
+        cron('*/59 * * * *')
+    }
+
     stages {
         stage('Checkout') {
             when {
